live-magic (0.4) UNRELEASED; urgency=low

  * Don't include "-num" in version.
  * Update live-helper dependency to 1.0~a42.
  * Use LIVE_ not LH_ (Closes: #443124)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 14 Jan 2008 18:36:43 +0000

live-magic (0.3-1) unstable; urgency=low

  * New upstream release:
    * Update setup.py with additional media. (Closes: #441702)
    * Remove a few unnecessary menu options. (Closes: #441742)
    * Remove GNUstep from options.
  * Add live-magic(1) manpage.
  * Merged a few packaging and typographical errors from Daniel
    Baumann <daniel@debian.org>.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 26 Aug 2007 13:32:00 +0100

live-magic (0.2-1) unstable; urgency=low

  * New upstream release.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 16 Aug 2007 21:35:46 +0100

live-magic (0.1-1) unstable; urgency=low

  * Initial release.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 28 May 2007 12:31:20 +0100