@@ -2,6 +2,7 @@ live-magic (0.4) UNRELEASED; urgency=low
 
   * Don't include "-num" in version.
   * Update live-helper dependency to 1.0~a42.
+  * Prefer cebootstrap if available and add to Recommends.
   * Use LIVE_ not LH_ (Closes: #443124)
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 14 Jan 2008 18:36:43 +0000
